crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__special_tests__error_in_alternation.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/special_tests.rs
---
Q = [(ERROR) (identifier)]
---
Root
  Def
    Id "Q"
    Equals "="
    Alt
      BracketOpen "["
      Branch
        Tree
          ParenOpen "("
          KwError "ERROR"
          ParenClose ")"
      Branch
        Tree
          ParenOpen "("
          Id "identifier"
          ParenClose ")"
      BracketClose "]"
