crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__special_tests__error_node.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/special_tests.rs
---
Q = (ERROR)
---
Root
  Def
    Id "Q"
    Equals "="
    Tree
      ParenOpen "("
      KwError "ERROR"
      ParenClose ")"
