crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__special_tests__error_node_with_capture.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/special_tests.rs
---
Q = (ERROR) @err
---
Root
  Def
    Id "Q"
    Equals "="
    Capture
      Tree
        ParenOpen "("
        KwError "ERROR"
        ParenClose ")"
      CaptureToken "@err"
