crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__special_tests__missing_in_sequence.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/special_tests.rs
---
Q = {(MISSING ";") (identifier)}
---
Root
  Def
    Id "Q"
    Equals "="
    Seq
      BraceOpen "{"
      Tree
        ParenOpen "("
        KwMissing "MISSING"
        DoubleQuote "\""
        StrVal ";"
        DoubleQuote "\""
        ParenClose ")"
      Tree
        ParenOpen "("
        Id "identifier"
        ParenClose ")"
      BraceClose "}"
