crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__special_tests__missing_node_with_string.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/special_tests.rs
---
Q = (MISSING ";")
---
Root
  Def
    Id "Q"
    Equals "="
    Tree
      ParenOpen "("
      KwMissing "MISSING"
      DoubleQuote "\""
      StrVal ";"
      DoubleQuote "\""
      ParenClose ")"
