crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__special_tests__special_node_nested.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/special_tests.rs
---
Q = (function_definition
    body: (block (ERROR)))
---
Root
  Def
    Id "Q"
    Equals "="
    Tree
      ParenOpen "("
      Id "function_definition"
      Field
        Id "body"
        Colon ":"
        Tree
          ParenOpen "("
          Id "block"
          Tree
            ParenOpen "("
            KwError "ERROR"
            ParenClose ")"
          ParenClose ")"
      ParenClose ")"
